Making CSS names more obvious

--- a/lib/index.html
+++ b/lib/index.html
@@ -3,13 +3,8 @@
 
   <head>
     <title>Gratipay comparison reference</title>
-    <!-- GitHub styles -->
-    <link rel="stylesheet" href="style.css">
-    <style>
-      body {
-        background: linen;
-      }
-    </style>
+    <!-- Load GitHub styles -->
+    <link rel="stylesheet" href="github.css">
   </head>
 
   <body>
