Fixed up a typo

--- a/lib/index.html
+++ b/lib/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <h3>HTMl/CSS Original</h3>
+    <h3>HTML/CSS Original</h3>
     <p>
       <button class="button primary" id="button">
         <img width="33" height="33" style="float: left;margin-left: -10px;" src="logo.png">
