Collecting text bounds

--- a/lib/index.html
+++ b/lib/index.html
@@ -16,8 +16,8 @@
   <body>
     <!-- DEV: We keep this at the top left so we don't have to do offset computations in info extraction -->
     <button class="button primary" id="button">
-      <img width="33" height="33" style="float: left;margin-left: -10px;" src="logo.png">
-      <span style="line-height: 30px; margin-left: 7px; font-size: 1.1em;">Support via Gratipay</span>
+      <img id="button__logo" width="33" height="33" style="float: left;margin-left: -10px;" src="logo.png">
+      <span id="button__text" style="line-height: 30px; margin-left: 7px; font-size: 1.1em;">Support via Gratipay</span>
     </button>
     <hr/>
     <h3>HTML/CSS Original</h3>
