Got SVG working in place of PNG

--- a/lib/index.html
+++ b/lib/index.html
@@ -27,6 +27,12 @@
         <span style="line-height: 30px; margin-left: 7px; font-size: 1.1em;">Support via Gratipay</span>
       </button>
     </p>
+    <p>
+      <button class="button primary">
+        <img width="27" style="float: left; margin-left: -6px;" src="logo.svg">
+        <span style="line-height: 30px; margin-left: 7px; font-size: 1.1em;">Support via Gratipay</span>
+      </button>
+    </p>
     <h3>SVG output</h3>
     <p>
       <img alt="SVG Gratipay badge" src="../dist/gratipay-badge.svg" />
