--- a/lib/index.html
+++ b/lib/index.html
@@ -16,15 +16,16 @@
   <body>
     <!-- DEV: We keep this at the top left so we don't have to do offset computations in info extraction -->
     <button class="button primary" id="button">
-      <img id="button__logo" width="27" style="float: left; margin-left: -6px;" src="logo.svg" />
-      <span id="button__text" style="line-height: 27px; margin-left: 7px; font-size: 1.1em;">Support via Gratipay</span>
+      <img id="button__logo" width="21" style="float: left; margin-left: -6px;" src="logo.svg" />
+      <!-- Line height should stay the same as the logo -->
+      <span id="button__text" style="line-height: 21px; margin-left: 7px; font-size: 1.1em;">Support via Gratipay</span>
     </button>
     <hr/>
     <h3>HTML/CSS Original</h3>
     <p>
       <button class="button primary">
-        <img width="27" style="float: left; margin-left: -6px;" src="logo.svg" />
-        <span style="line-height: 27px; margin-left: 7px; font-size: 1.1em;">Support via Gratipay</span>
+        <img width="21" style="float: left; margin-left: -6px;" src="logo.svg" />
+        <span style="line-height: 21px; margin-left: 7px; font-size: 1.1em;">Support via Gratipay</span>
       </button>
     </p>
     <h3>SVG output</h3>
