--- a/lib/index.html
+++ b/lib/index.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>Gratipay comparison reference</title>
+    <title>Comparison reference</title>
     <style>
       /* Reset styles */
       body {
@@ -18,19 +18,19 @@
     <button class="button primary" id="button">
       <img id="button__logo" width="21" style="float: left; margin-left: -6px;" src="logo.svg" />
       <!-- Line height should stay the same as the logo -->
-      <span id="button__text" style="line-height: 21px; margin-left: 7px; font-size: 1.1em;">Support via Gratipay</span>
+      <span id="button__text" style="line-height: 21px; margin-left: 7px; font-size: 1.1em;">Support via PayPal</span>
     </button>
     <hr/>
     <h3>HTML/CSS Original</h3>
     <p>
       <button class="button primary">
         <img width="21" style="float: left; margin-left: -6px;" src="logo.svg" />
-        <span style="line-height: 21px; margin-left: 7px; font-size: 1.1em;">Support via Gratipay</span>
+        <span style="line-height: 21px; margin-left: 7px; font-size: 1.1em;">Support via PayPal</span>
       </button>
     </p>
     <h3>SVG output</h3>
     <p>
-      <img alt="SVG Gratipay badge" src="../dist/gratipay-badge.svg" />
+      <img alt="SVG button" src="../dist/button.svg" />
     </p>
   </body>
 </html>
